<resources>
    <string name="app_name">ir</string>
    <string name="action_settings">Settings</string>
    <string name="measurement">Ostatni pomiar :  </string>
    <string name="start_measure">Rozpocznij pomiar</string>
    <string name="history">Historia pomiarów</string>
    <string name="measurement_date">Ostatni pomiar: </string>
    <string name="info"> Zaloguj się, aby móc korzystać z aplikacji</string>
    <string name="name"> Imię i nazwisko </string>
    <string name="surname"> Hasło </string>
    <string name="login"> Zaloguj </string>
    <string name="name_surname"> Imię i nazwisko </string>
    <string name="pass">Hasło</string>
</resources>
