<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_person_white"
        android:layout_gravity="center">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/info"
        android:textSize="30dp"
        android:padding="20dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/name"
            android:textColor="@color/colorAccent"
            android:padding="20dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/name_login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/surname"
            android:textColor="@color/colorAccent"
            android:padding="20dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/surname_login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextPassword"
        android:text="Zapamietać hasło?"
        android:textColor="#FFF" />
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Zarejestruj się"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>

